<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meerkat Secure®</string>
    <string name="hello_world">Hello world!</string>
    <string name="mdp">Mot de passe</string>
    <string name="id">Identifiant</string>
    <string name="logo">Logo Meerkat Secure</string>
    <string name="doorImage">Qui est à la porte ?</string>
    <string name="sonne_a_la_porte">Voulez-vous laisser entrer cette personne ?</string>
    <string name="radio_nfc">Badge NFC</string>
    <string name="radio_digicode">Digicode</string>
    <string name="type_acces">Type de l\'accès</string>
    <string name="radio_permanent">Permanent</string>
    <string name="radio_temporary">Temporaire</string>
    <string name="permanent_acces">Durée de validité</string>
    <string name="owner_acces">Propriétaire</string>
    <string name="pin_code">Code PIN</string>
    <string name="ws_url">Environnement des webservices</string>
    
    <string name="writetag">Créer badge</string>
    <string name="device_not_nfc">This application or device does not support NFC.</string>
    <string name="nfc_disabled">NFC is disabled.</string>
    <string name="taptag_message">This action will\npersonalize the tag</string>
    <string name="taptag_title">Please tap the tag</string>
    
    <!-- ACTIVITY NAMES -->
    <string name="title_activity_inscription">Inscription Activity</string>
    <string name="title_activity_valid_enter">Demande d\'autorisation</string>
    <string name="title_activity_badges">Badges</string>
    <string name="title_activity_digicodes">Digicodes</string>
    <string name="title_activity_history">Historique</string>
    <string name="title_activity_settings">Paramètres</string>
    <string name="title_activity_about">A propos</string>
    <string name="title_activity_add_badge">Ajouter un accès</string>
    <string name="title_activity_show_badge">Emulation badge</string>

    <!-- BUTTONS -->
    <string name="action_add">Ajouter</string>
    <string name="bouton_ajouter">Ajouter</string>
    <string name="bouton_valider">Valider</string>
    <string name="bouton_connecter">Se connecter</string>
    <string name="bouton_inscription">Pas de compte ? M\'inscrire</string>
    <string name="bouton_autoriser">Autoriser</string>
    <string name="bouton_refuser">Refuser</string>
    <string name="drawer_open">Menu gauche déplié</string>
    <string name="drawer_close">Menu gauche replié</string>

    <!-- ERRORS MESSAGES -->
    <string name="error_field_required">Ce champ est obligatoire</string>
    <string name="error_invalid_password">Mot de passe trop court</string>
    <string name="error_incorrect_password">Mot de passe incorrect</string>
    <string name="error_login_progress_signing_in">Connexion en cours</string>
    <string name="title_activity_badges_list_fragment">BadgesListFragment</string>
    <string name="title_activity_digicodes_list_fragment">DigicodesListFragment</string>
    
    <!-- LEFT MENU -->
    <string-array name="menu_array">
        <item>Badges</item>
        <item>Digicodes</item>
        <item>Historique</item>
        <item>Paramètres</item>
        <item>Déconnexion</item>
        <item>A propos</item>
    </string-array>

    <string name="title_activity_history_fragment">HistoryFragment</string>
    <string name="title_activity_about_fragment">AboutFragment</string>
    <string name="title_activity_settings_fragment">SettingsFragment</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_copy_badge">CopyBadgeActivity</string>

    <!-- SHOW BADGE -->
    <string name="card_title">Suricate Badge</string>
    <string name="service_name">Suricate Service</string>
    <string name="show_badge">Veuillez approcher votre badge de la serrure</string>
</resources>