<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".AddBadgeActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/owner_acces"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/owner_acces"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_owner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/type_acces"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_acces"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/group_type_acces"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_digicode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/radio_digicode" />

            <RadioButton
                android:id="@+id/radio_nfc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/radio_nfc" />
        </RadioGroup>

        <TextView
            android:id="@+id/permanent_acces"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/permanent_acces"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroup1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_permanent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/radio_permanent" />

            <RadioButton
                android:id="@+id/radio_temporary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/radio_temporary" />
        </RadioGroup>

        <TextView
            android:id="@+id/pin_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pin_code"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/edit_pin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:visibility="invisible" />
    </LinearLayout>

    <Button
        android:id="@+id/ajouter_acces"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_alignParentBottom="true"
        android:background="#2ecc71"
        android:text="@string/bouton_ajouter"
        android:textColor="#FFFFFF" />

</RelativeLayout>